k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: noncog
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: noncog-cert
    kubernetes.io/ingress.global-static-ip-name: noncog-ip
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: app.34.107.156.246.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.34.107.156.246.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
    - host: grafana.34.107.156.246.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
    - host: prometheus.34.107.156.246.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 80
    - host: mlflow.34.107.156.246.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 80
